[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apphelpers"
version = "0.100.1"
description = "Common helper libraries for Python Apps"
readme = "README.md"
authors = [
    {name = "Stck.me Engineering", email = "engg@stck.me"},
]
license = {text = "MIT license"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
keywords = ["apphelpers"]
dependencies = [
    "loguru",
    "google-auth",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/stckme/apphelpers"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.isort]
multi_line_output = 3
profile = "black"
